# sych-assessment

./: Dockerfile  README.md  background_task_runner.py  docker-compose.yml  main.py  mock_model.py  models.py  prediction_results.py  pyproject.toml
app/src/: a.py  background_task_runner.py  main.py  models.py  predict.py  prediction_results.py  rabbit.py
