[project]
name = "sych-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.1",
]
[tool.setuptools]
package-dir = {"" = "app/src"}

[tool.setuptools.packages.find]
where = ["app/src"]